--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,23 @@ buildscript {
 
   repositories {
     mavenCentral()
+    jcenter()
   }
   dependencies {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.4'
   }
 }
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'com.github.johnrengelman.shadow'
+
+jar {
+  manifest {
+    attributes("Main-Class": "com.qingjingjie.jcr.MainKt", "Implementation-Title": "Gradle")
+  }
+}
 
 repositories {
   mavenCentral()
